// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ventoDevice should be able to get status from modbus on init 1`] = `
{
  "apiCalls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {},
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_connectivity": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 2,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Locating device with id TEST1234",
      ],
      [
        "log",
        "Device IP could not be found, setting device to unavailable",
      ],
      [
        "setUnavailable was called",
        "Device not discovered yet",
      ],
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
      [
        "log",
        "Requesting the current device state",
      ],
      [
        "error",
        "Failed to get device state, device unreachable",
        {
          "deviceId": undefined,
          "deviceIp": undefined,
        },
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {},
    "settings": {
      "devicepwd": "password",
    },
  },
}
`;

exports[`ventoDevice should be able to get status when device is marked as off 1`] = `
{
  "apiCalls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {},
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_connectivity": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 2,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Locating device with id TEST1234",
      ],
      [
        "error",
        "Could not connect to device at IP 127.0.0.3",
        [TypeError: Cannot read properties of undefined (reading 'then')],
      ],
      [
        "error",
        "Could not connect to device at IP [object Promise]",
        [TypeError: Cannot read properties of undefined (reading 'then')],
      ],
      [
        "log",
        "Device IP could not be found, setting device to unavailable",
      ],
      [
        "setUnavailable was called",
        "Device not discovered yet",
      ],
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
      [
        "log",
        "Requesting the current device state",
      ],
      [
        "error",
        "Failed to get device state, device unreachable",
        {
          "deviceId": undefined,
          "deviceIp": undefined,
        },
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {},
    "settings": {
      "devicepwd": "password",
    },
  },
}
`;

exports[`ventoDevice should be able to handle errors 1`] = `
{
  "apiCalls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {},
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_connectivity": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 2,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Locating device with id TEST1234",
      ],
      [
        "error",
        "Could not connect to device at IP 127.0.0.3",
        [TypeError: Cannot read properties of undefined (reading 'then')],
      ],
      [
        "error",
        "Could not connect to device at IP [object Promise]",
        [TypeError: Cannot read properties of undefined (reading 'then')],
      ],
      [
        "log",
        "Device IP could not be found, setting device to unavailable",
      ],
      [
        "setUnavailable was called",
        "Device not discovered yet",
      ],
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
      [
        "log",
        "Requesting the current device state",
      ],
      [
        "error",
        "Failed to get device state, device unreachable",
        {
          "deviceId": undefined,
          "deviceIp": undefined,
        },
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {},
    "settings": {
      "devicepwd": "password",
    },
  },
  "error": undefined,
}
`;

exports[`ventoDevice should be able to setup all capabilities 1`] = `
{
  "calls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {},
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {},
    "settings": {
      "devicepwd": "password",
    },
  },
}
`;

exports[`ventoDevice should get and set values trough the api and modbus 1`] = `
{
  "modbusCalls": [],
}
`;

exports[`ventoDevice should init the api 1`] = `
{
  "deviceId": undefined,
  "deviceIp": undefined,
  "devicePass": undefined,
}
`;
